chore: added the vite support and base components sdetup

--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,24 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  display: contents;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+:root {
+  --page-background: var(--color-gray-950);
+  --color-fg: var(--color-gray-200);
+  --color-primary: var(--color-blue-500);
+  --color-active: var(--color-pink-500);
+  --color-muted: hsl(var(--hsl-gray-200) / 10%);
+  --main-content-bg: var(--color-gray-900);
+  --main-content-box-shadow: hsl(var(--hsl-gray-50) / 0.14) 0px 0px 0px 1px;
+  --outline-active-fg: var(--color-fg);
+  --outline-default-fg: var(--color-gray-500);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a > .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+html {
+  scroll-behavior: smooth;
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+body {
+  background: var(--page-background);
+  color: var(--color-fg);
 }
